feat(auth): Login-Prozess und Token-Handling finalisiert
- Access- und Refresh-Token korrekt im Frontend gespeichert
- Backend-Logging im AuthController erweitert (Registrierung, Login, Refresh)
- Fehlerbehandlung in AuthController und JwtAuthFilter ergänzt
- Debug-Logging für fehlerhafte JWTs und BadCredentials implementiert
- Frontend `Login.jsx` und `api.js` angepasst für vollständige JWT-Verarbeitung